<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/iproovLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/iproov_logo"
        android:src="@drawable/iproov_logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/needScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_scan"
        android:layout_marginTop="@dimen/activity_margin"
        app:layout_constraintTop_toBottomOf="@+id/iproovLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/instructionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_title"
        android:layout_marginTop="@dimen/activity_margin"
        app:layout_constraintTop_toBottomOf="@+id/needScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/instructionFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_first"
        android:layout_marginTop="@dimen/activity_margin"
        app:layout_constraintTop_toBottomOf="@+id/instructionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/instructionSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_second"
        android:layout_marginTop="@dimen/activity_margin"
        app:layout_constraintTop_toBottomOf="@+id/instructionFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/instructionEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_end"
        android:layout_marginTop="@dimen/activity_margin"
        app:layout_constraintTop_toBottomOf="@+id/instructionSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:autofillHints="Your Username (for testing)"
        android:inputType="text"
        android:hint="@string/username_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionEnd"
        />

    <Button
        android:id="@+id/enrolGpaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/enrol_gpa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrolGpaButton" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>